# WindowsHelper

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/winhelp/: ErrorHandling.h  WindowsHelper.h
src/: CMakeLists.txt  ErrorHandling.cpp
